2009-11-10  Sam Steingold  <sds@gnu.org>

	* configure (ffi_modules): fix the configure.in test for module
	requiring FFI

2009-11-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib): use FULLTOPDIR for build-aux

2009-11-05  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (note-function-used): use STYLE-WARNING for
	deprecated functions because WARNING implies non-NIL 3rd return
	value (failure-p) from COMPILE which is an overkill
	* deprecated.lisp (type-expand-1): ditto

2009-11-05  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (initialize_thread_bindings): allocate per thread value
	cell for symbols that do not have one

2009-11-04  Sam Steingold  <sds@gnu.org>

	* eval.d (interpret_bytecode_): fix a type error in the last patch

2009-11-03  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: create dynamic bindings for all special variables
	* zthread.d (initialize_thread_bindings): initializes symbols per
	thread value cells during thread creation
	(thread_stub): use it
	(MAKE-THREAD): check that :initial-bindings is proper list
	* lispbibl.d (initialize_thread_bindings): declare as global
	* spvw.d (mt_main_actions): use it
	* control.d (make_variable_frame): allocate per thread value cells
	for locally declared special variables (if needed)
	* eval.d (progv, cod_bind): ditto
	* threads.lisp (*DEFAULT-SPECIAL-BINDINGS*): initialize per thread
	bindings with global symbol values

2009-11-01  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-cerror): extract predefun from ...
	(c-error): use it; accept DETAIL as the 1st argument
	(test-list, c-form, test-argument-syntax, c-illegal-syntax)
	(c-analyze-lambdalist, bind-fixed-var-1, bind-movable-var)
	(bind-movable-var, c-DECLARE, c-SETQ, c-PSETQ)
	(c-MULTIPLE-VALUE-SETQ, c-MULTIPLE-VALUE-BIND, check-blockname)
	(c-RETURN-FROM, c-TAGBODY, c-GO, c-FUNCTION, err-syntax)
	(c-SYMBOL-MACROLET, c-EVAL-WHEN, c-COND, c-CASE, c-FUNCALL-INLINE):
	pass DETAIL to C-ERROR